openwebrx (1.2.43) bullseye jammy; urgency=low

  * Added option to switch between US and EU RDS decoding.
  * Refactored and improved CW, SITOR-B, and CCIR476 decoders.
  * Fixed info bubble not updating in Google map.
  * Fixed resizing RDS display on mobile devices.  
  * Fixed date/time parsing in RDS display.
  * Fixed CW decoder to print underscores for unrecognized characters.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 18 Dec 2023 16:12:00 +0000

openwebrx (1.2.42) bullseye jammy; urgency=low

  * Added broadcast FM RDS decoder, using Redsea.
  * Added bind_address core configuration parameter.
  * Descreased SDR initialization retry time to 15 seconds.
  * Stopped some failed sources from restarting indefinitely.
  * Enabled nano-scroller in relevant panels on startup.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 9 Dec 2023 16:12:00 +0000

openwebrx (1.2.41) bullseye jammy; urgency=low

  * Added message broadcasting function for admin.
  * Added ability to disable chat between clients.
  * Fixed Settings crash when a client has no SDR selected.
  * Fixed colors resetting when tuning outside profile.
  * Leaflet map now saves map and layer selections.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 2 Dec 2023 16:12:00 +0000

openwebrx (1.2.40) bullseye jammy; urgency=low

  * Added chat between currently connected users.
  * Added ability to manage clients connected via reverse proxy.
  * The proxy has to provide correct X-Forwarded-For header.
  * Relaxed policy so that only socket connections are banned.
  * Moved all client-related code to client.py.
  * Moved ColorCache implementation to color.py.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 25 Nov 2023 16:12:00 +0000

openwebrx (1.2.39) bullseye jammy; urgency=low

  * Added connected clients display to the Settings page.
  * Added ability to ban clients for chosen amount of time.
  * Added ability to unban previously banned clients.
  * Fixed agent string to make RepeaterBook work.